Bug 1357636 - Improve IndexedDB error message on deleting an undefined object; r=janv

Patch authored by Diego Pino Garcia.